# ivan_aruco

./: .gitignore  CMakeLists.txt  box.pcd  box_marker1.pcd  example.txt  markers.pcd  package.xml  reconstruced.pcd
config/: camera_info.yaml
descriptors/: set1.pcd  set2.pcd
kinect_retrieve_saves/: .gitignore
launch/: SLAM_reconstructor.launch  kinect_live_estimation.launch  kinect_model_reconstruction.launch  kinect_projection.launch  kinect_recorder.launch  pose_estimation_cloud_viewer.launch  rosbag_analysis.launch  rosbag_replay.launch  single_pose_estimation.launch
model/: color.txt  heli_full_texture.txt  model.txt  model2.txt  modelblend.blend  modelblend.blend1  modelblend.ply  short_ws.txt  simple_cube.blend  simple_cube.ply  simple_cube.txt
scripts/: calibration_from_file.py  calibrator.py  kinect_calibration.py
src/: SLAM_reconstructor.cpp  data_manager.cpp  kinect_depth_test.cpp  kinect_image_view.cpp  kinect_model_reconstruction.cpp  kinect_pose_estimation.cpp  kinect_projection.cpp  kinect_recorder.cpp  kinect_retrieve.cpp  pose_estimation_cloud_viewer.cpp  replay_analysis.cpp  rosbag_replay.cpp  single_frame_overlay.cpp  single_pose_estimation.cpp  test_bag_generator.cpp
